force-app/main/default/objects/RW_Demand_Item__c/RW_Demand_Item__c.object-meta.xml
<CustomObject>
    <label>Demand Item</label>
    <nameField>
        <displayFormat>DI-{00000000}</displayFormat>
        <label>Demand Item  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demand Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>