force-app/main/default/objects/RW_Demand_Item__c/fields/RW_Demand__c.field-meta.xml
<CustomField>
    <fullName>RW_Demand__c</fullName>
    <label>Demand</label>
    <referenceTo>RW_Demand__c</referenceTo>
    <relationshipLabel>Demand Items</relationshipLabel>
    <relationshipName>Demand_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>