force-app/main/default/objects/RW_Demand_Item__c/fields/RW_Demand_Item_Amount__c.field-meta.xml
<CustomField>
    <fullName>RW_Demand_Item_Amount__c</fullName>
    <label>Demand Item Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>