force-app/main/default/objects/RW_Demand_Item__c/fields/RW_Demand_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>RW_Demand_Item_Number__c</fullName>
    <label>Demand Item Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>