force-app/main/default/objects/RW_Demand_Item__c/fields/RW_Legacy_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>RW_Legacy_Amount_Paid__c</fullName>
    <label>Legacy Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>