force-app/main/default/objects/RW_Demand_Item__c/fields/RW_Legacy_Demand__c.field-meta.xml
<CustomField>
    <fullName>RW_Legacy_Demand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legacy Demand</label>
    <type>Checkbox</type>
</CustomField>