force-app/main/default/objects/RW_Demand_Item__c/fields/RW_Milestone_Name__c.field-meta.xml
<CustomField>
    <fullName>RW_Milestone_Name__c</fullName>
    <label>Milestone Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>