force-app/main/default/objects/RW_Demand_Item__c/fields/RW_Payment_Detail_Item__c.field-meta.xml
<CustomField>
    <fullName>RW_Payment_Detail_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Detail Item</label>
    <referenceTo>RW_Payment_Detail_Item__c</referenceTo>
    <relationshipLabel>Demand Items</relationshipLabel>
    <relationshipName>Demand_Items</relationshipName>
    <type>Lookup</type>
</CustomField>