force-app/main/default/objects/RW_Demand_Item__c/fields/RW_Stop_Receipt_Rollup__c.field-meta.xml
<CustomField>
    <fullName>RW_Stop_Receipt_Rollup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stop Receipt Rollup</label>
    <type>Checkbox</type>
</CustomField>