force-app/main/default/objects/RW_Demand_Item__c/fields/RW_Total_Demand_Item_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>RW_Total_Demand_Item_Amount_Paid__c</fullName>
    <label>Total Demand Item Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>