force-app/main/default/objects/RW_Demand_Item__c/fields/RW_Usage_Code__c.field-meta.xml
<CustomField>
    <fullName>RW_Usage_Code__c</fullName>
    <label>Usage Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>