force-app/main/default/objects/RW_Demand_Item__c/fields/Total_Demand_Item_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Demand_Item_Amount__c</fullName>
    <formula>RW_GST_Amount__c + RW_Demand_Item_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Demand Item Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>